src/test/ui/existential_types/generic_not_used.stderr
error: type parameter `V` is part of concrete type but not used in parameter list for existential type
  --> $DIR/generic_not_used.rs:7:73
   |
LL |   fn wrong_generic<U: 'static, V: 'static>(_: U, v: V) -> WrongGeneric<U> {
   |  _________________________________________________________________________^
LL | | //~^ ERROR type parameter `V` is part of concrete type but not used in parameter list
LL | |     v
LL | | }
   | |_^

error: aborting due to previous error

